--- a/index.html
+++ b/index.html
@@ -32,24 +32,23 @@ index.html
 </tr>
 <table border="0"cellspacing="0" cellpadding="0" >
 <tr >
-<td height="40" ><b>İnstagram:</b><a href="http://www.instagram.com/samet__gumus/"target="_blank" ><font color="a9eff6"> Samet Gümüş</a></td>
+<td height="32" ><b>İnstagram:</b><a href="http://www.instagram.com/samet__gumus/"target="_blank" ><font color="a9eff6"> Samet Gümüş</a></td>
 </tr><tr>
-<td height="40" ><b>Linkedln:</b> <a href="https://www.linkedin.com/in/samet-gümüş-128100220/"target="_blank" </a><font color="a9eff6">Samet Gümüş</td>
+<td height="32" ><b>Linkedln:</b> <a href="https://www.linkedin.com/in/samet-gümüş-128100220/"target="_blank" </a><font color="a9eff6">Samet Gümüş</td>
 </tr>
-<tr><td height="40" ><b>Steam:</b><a href="https://steamcommunity.com/profiles/76561198212348073/" target="_blank" </a><font color="a9eff6">Burjuva</td>
-</tr><tr><td height="40" ><b>For business:</b> <font color="red">sagumax404@gmail.com</td>
+<tr>
+<td height="32" ><b>Github:</b> <a href="https://github.com/sagumax404"target="_blank" </a><font color="a9eff6">sagumax404</td>
+</tr>
+<tr><td height="32" ><b>Steam:</b><a href="https://steamcommunity.com/profiles/76561198212348073/" target="_blank" </a><font color="a9eff6">Burjuva</td>
+</tr><tr><td height="32" ><b>For business:</b> <font color="red">sagumax404@gmail.com</td>
 </tr>
 </table>
 <tr >
 
 <td height="100"background="blue.jpg" ><a href="aksiyon.html" ><font color="a9eff6" size="5">Aksiyon Oyunları</a> </td>
-
 </tr>
 </table> 
-
-
 </td>
-
 </tr>
 </table>
 
